...
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/debug_logging_title"
        android:textSize="@dimen/default_text_size" />

    <LinearLayout
        android:id="@+id/restPeriodRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/default_view_height"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">
...
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/auto_restart_title"
        android:textSize="@dimen/default_text_size" />

    <LinearLayout
        android:id="@+id/alertWebhookRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/default_view_height"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">
...
        android:text="@string/contact_header"
        android:textColor="@color/primary"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/callPhoneRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/default_view_height"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp">

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/add_sms_contact_button_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>


