...
    <string name="webhook_request_success_notification_text">Response code was %1$d</string>
    <string name="webhook_request_failure_notification_title">Keep Alive Webhook Failed!</string>
    <string name="webhook_request_failure_code_notification_text">Response code was %1$d</string>
    <string name="webhook_request_failure_error_notification_text">Error: %1$s</string>

    <!-- action settings -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logdisplay">Debug Logs</string>
    <string name="about_dialog_title">About Keep Alive</string>

    <!-- wrap in CDATA so that it doesn't get interpreted as XML? -->
    <string name="about_message_content" translatable="false"><![CDATA[
...
    <string name="call_sent_notification_channel_description">Sent when an Phone Call alert is triggered</string>
    <string name="webhook_sent_notification_channel_description">Sent when a Webhook alert is triggered</string>
    <string name="alert_service_notification_channel_description">Displayed while sending an Alert</string>
    <string name="activity_notification_message">Glad you\'re OK! Cancelling Alert.</string>
    <string name="initial_check_notification_title">Are you still there?</string>
    <string name="overlay_countdown_format">Alert will be sent in %1$d:%2$02d</string>
    <string name="initial_check_notification_text">Tap here to confirm you\'re OK. Otherwise an alert will be sent in %1$s minutes.</string>
    <string name="alert_notification_title">Keep Alive Alert triggered!</string>
    <string name="call_alert_notification_text">A phone call has been placed to your emergency contact: %1$s</string>
    <string name="sms_alert_notification_text">An SMS has been sent to your emergency contact(s)!</string>
    <string name="sms_alert_failure_notification_title">Failed to send SMS Alert</string>
    <string name="sms_alert_failure_notification_text">Error occurred while attempting to send Alert SMS</string>
    <string name="sms_alert_failure_notification_text_with_error">Error occurred while attempting to send Alert SMS: %1$s</string>
...
    <string name="exact_alarm_note">NOTE: This timing is not exact and the system may delay this notification by up to 1 hour.\n\nEnable \'Use Exact Alarm Timing\' below if you require precise checks, which may slightly increase battery usage.</string>
    <string name="rest_period_title">Rest Period Time Range</string>
    <string name="followup_time_period_description">The # of minutes to wait after sending a \'Are you there?\' notification before an Alert will be sent to your Emergency Contact(s)</string>
    <string name="contact_phone_title">Call Phone Number (Optional)</string>
    <string name="add_sms_contact_button_text">Add SMS Emergency Contact</string>
    <string name="contact_phone_description">When an Alert is triggered, a phone call will be placed to this phone number with speakerphone enabled.\n\nPlease note that this requires additional permissions so that phone calls can be placed from the background.</string>
    <string name="default_alert_message">Automated alert: I have not used my phone in a while and may need assistance. Please try to contact me, and check on me if you cannot reach me.</string>
    <string name="default_alert_message_alt">Hey, if I do not contact you in the next 24 hours, you know what to do.</string>
    <string name="add_emergency_contact_title">Add Emergency Contact</string>
    <string name="edit_emergency_contact_title">Edit Emergency Contact</string>
    <string name="webhook_title">Alert Webhook</string>

    <!-- Monitored Apps strings -->
    <string name="monitored_apps_title">Monitoring Method</string>
...
